fixed media query on tablet version

--- a/my-react-portfolio/src/index.css
+++ b/my-react-portfolio/src/index.css
@@ -24,14 +24,13 @@ body{
 
 .my-img{
   width: 130px;
-  height: 130px;
   border-radius: 50%;
   display: block;
   margin: 50px auto;
 }
 .repo-img , img{
-  width: 300px;
-  height: 200px;
+  min-width: 300px;
+  width: 100%;
   border-left: 8px solid #0B24F5;
   border-bottom: 8px solid #0B24F5;
   display: block;
@@ -44,9 +43,10 @@ h1 {
 .tech-container{
   background-color: #0B24F5;
   color: whitesmoke;
-  padding: 40px 10px;
+  padding: 70px 10px;
   width: 100%;
   margin: 30px 0;
+  text-align: center;
 }
 .tech-container h1{
   color: whitesmoke;
@@ -101,6 +101,9 @@ button{
   background-color: #FFD338;
   color: whitesmoke;
 }
+.btn-yellow{
+  margin-bottom: 40px;
+}
 .words h1{
   text-align: center;
   margin-bottom: 30px;
@@ -113,13 +116,13 @@ button{
 .words img{
   border-left: 8px solid #FF4575;
   border-bottom: 8px solid #FF4575;
-  margin: 20px;
+  
 }
 .words .path-img{
   border: none;
   width: 100%;
   position: absolute;
-  top: -100px;
+  top: -20px;
   left: 0;
   margin: 0;
   
@@ -137,6 +140,10 @@ button{
   background-color: #0B24F5;
   color: whitesmoke;
   text-align: center;
+  padding: 40px 0;
+}
+.skill h1{
+  color: whitesmoke;
 }
 .media{
   text-align: center;
@@ -155,6 +162,9 @@ button{
   color: rgb(198, 195, 195);
   transition: all .5s;
 }
+.media ul{
+  margin-top: 18px
+}
 .media li a:hover{
   color: black
 }
@@ -167,4 +177,124 @@ button{
 }
 .footer h1{
   color: whitesmoke;
+}
+@media screen and (min-width:744px) {
+  .header{
+    display: grid;
+    grid-template-columns: 45% 55%;
+    grid-template-rows: auto auto 75% 25%;
+    
+    
+  }
+  .img-container{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    align-self: center;
+    
+  }
+  .my-img{
+    display: inline;
+  }
+  .header-text{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    font-size: 22px;
+    align-self: center;
+   
+  }
+  .position{
+    grid-column-start: 1;
+    grid-column-end: span 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    font-size: 40px;
+   
+  }
+  .mina{
+    font-size: 22px;
+    font-weight: bold;
+    grid-column-start: 1;
+    grid-column-end: span 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+  }
+  .up-img{
+    grid-column-start: 1;
+    grid-column-end:span 2;
+    grid-row-start: 4;
+    grid-row-end: 5;
+   
+  }
+  .list-item{
+    display: grid;
+    grid-template-columns: 45% 55%;
+    grid-template-rows: 10% 35% 15% auto ;
+    gap: 10px;
+  }
+  .repo-img{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 5;
+    width: 0;
+    height: 0;
+    min-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    
+
+  }
+  .repo-name{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+
+  }
+  .repo-text{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    
+
+  }
+  .tag{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    margin-right: 10px;
+  }
+  .btn-container{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    align-self: center;
+  }
+  .btns{
+    display: flex;
+    gap: 10px;
+  }
+  .projects h1{
+    text-align: left;
+    font-size: 40px;
+  }
+  .words h1{
+    text-align: left;
+  }
+  .skill h1{
+    font-size: 40px;
+  }
+  .skill-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
 }
